--- a/page3.html
+++ b/page3.html
@@ -10,18 +10,19 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
-  <body>
+  <body class="page3">
+<h1>Self Gallary</h1>
   <nav class="navbar navbar-expand-sm bg-light">
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Link 1</a>
+        <a class="nav-link" href="index.html">page 1</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="page2.html">Link 2</a>
+        <a class="nav-link" href="page2.html">page 2</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="page3.html">Link 3</a>
+        <a class="nav-link" href="page3.html">page 3</a>
       </li>
     </ul>
   </div>
@@ -60,6 +61,36 @@
 
 <div class="container-fluid mt-3">
 
+  <div class="container mt-3">
+
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+    Info on pictures
+  </button>
+</div>
+
+
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+   
+      <div class="modal-header">
+        <h4 class="modal-title">info</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+     
+      <div class="modal-body">
+        These are some pictures of me from my freshmen year that were taken by some of my friends and family
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
 
   </body>
 </html>
